# ChEMBLdb-query

./: .env.example  AGENTS.md  README.md  db-llm-query-chembl.skill  pyproject.toml
.claude/: LEARNINGS.md
.codex/skills/chembl-database/: SKILL.md
.codex/skills/db-llm-query-chembl/: SKILL.md
.codex/skills/db-llm-query-chembl/references/: cli_flags.md  output_layout.md  prompt_patterns.md
.codex/skills/db-llm-query-chembl/scripts/: inspect_results.py  rdkit_similarity.py
database/: INSTALL
doc/: AGENTS_TEXT2CHEMBL.md  chembl_database_schema.md  chembl_prompt_hints.md  providers.md
src/: db_llm_query.py  db_llm_query_v1.py
src/text2sql/: ANTHROPIC_PROVIDER.md  __init__.py  anthropic_direct.py  base.py  cerebras.py  deepseek.py  env.py  gemini_direct.py  local_llm.py  openai_direct.py  openrouter.py  zai.py
